package factory;

public interface Service {

	void machWas();
	void machNochEtwas();
}
